# mbo-csv-to-json-ld

./: .gitignore  Action.csv  Audience.csv  ContactPoint.csv  DataDownload.csv  Dataset.csv  DatasetComment.csv  DefinedTerm.csv  EmbargoStatement.csv  GeoShape.csv  HowTo.csv  HowToStep.csv  HowToTip.csv  License.csv  Makefile  MonetaryGrant.csv  Organization.csv  Person.csv  Place.csv  PropertyValue.csv  PublishingStatusDefinedTerm.csv  README.md  Service.csv  SoftwareApplication.csv  SoftwareSourceCode.csv  Taxon.csv  VariableMeasured.csv  check_csv_integrity.py  class-descriptions.md  contact-point.csv  data-download.csv  dataset-comment.csv  dataset-metadata.json  dataset.csv  eov-bio-geo-chem.csv  eov-metadata.json  eov-physics.csv  eov.csv  license.csv  monetary-grant.csv  (+4 more)
data/: Action.csv  Audience.csv  ContactPoint.csv  DataDownload.csv  Dataset.csv  DatasetComment.csv  DefinedTerm.csv  Document.csv  GeoShape.csv  HowTo.csv  HowToTip.csv  License.csv  MonetaryGrant.csv  Organization.csv  Person.csv  Place.csv  PropertyValue.csv  PublishingStatusDefinedTerm.csv  Service.csv  Taxon.csv  (+2 more)
remote/scripts/: Dockerfile  pyproject.toml
remote/scripts/mbocsvwscripts/: generatecsvwdefinitions.py  listcolumnforeignkeycheck.py  listcolumnsasnodes.py  partition.py  processparametadata.py  unionuniqueidentifiers.py
remote/scripts/test/: test_listcolumnforeignkeycheck.py  test_listcolumnsasnodes.py  test_partition.py  test_processparametadata.py  test_unionuniqueidentifiers.py  utils.py
remote/scripts/test/testcases/: a.csv  b.csv  bulk-licenses.ttl  bulk-monetary-grant.ttl  child_table_invalid.csv  child_table_valid.csv  child_table_valid_comma.csv  dataset.ttl  license-1-input-metadata.json  parent_table.csv
remote/scripts/test/testcases/parametadata/: mbo_TODO_LICENSE_1.json
(+696 files in other folders)
