[tool.poetry]
name = "mbocsvwscripts"
version = "0.1.0"
description = "Scripts to support the conversion of CSV data into schema.org JSON-LD documents"
authors = ["roblinksdata <robert.barry@awi.de>"]
license = "CC-0"
readme = "README.md"
packages = [
  {include = "mbocsvwscripts"},
]

[tool.poetry.scripts]
listcolumnsasnodes = 'mbocsvwscripts.listcolumnsasnodes:main'

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.1.3"
click = "^8.1.8"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
