[tool.poetry]
name = "mbocsvwscripts"
version = "0.1.0"
description = "Scripts to support the conversion of CSV data into schema.org JSON-LD documents"
authors = ["roblinksdata <robert.barry@awi.de>"]
license = "CC-0"
readme = "README.md"
packages = [
  {include = "mbocsvwscripts"},
]

[tool.poetry.scripts]
listcolumnsasnodes = 'mbocsvwscripts.listcolumnsasnodes:main'
listcolumnforeignkeycheck = 'mbocsvwscripts.listcolumnforeignkeycheck:main'
unionuniqueidentifiers = 'mbocsvwscripts.unionuniqueidentifiers:main'
partition = 'mbocsvwscripts.partition:main'
processparametadata = 'mbocsvwscripts.processparametadata:main'
generatecsvwdefinitions = 'mbocsvwscripts.generatecsvwdefinitions:main'

[tool.poetry.dependencies]
python = "^3.12"
rdflib = "^7.1.3"
click = "^8.1.8"
pandas = "^2.2.3"
linkml = "^1.8.7"
tabulate = "^0.9.0"
pyshacl = "^0.30.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"
pyright = "^1.1.394"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
